--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
     "    return None\n",
     "\n",
     "\n",
-    "def depth_first_graph_search_2(agent):\n",
+    "def breadth_first_graph_search_2(agent):\n",
     "    #TODO\n",
     "    \"\"\"\n",
     "    Search the deepest nodes in the search tree first.\n",
@@ -243,7 +243,7 @@
     "    while frontier:\n",
     "        print(\"stack:\",frontier)\n",
     "        print(\"stack reversed\",list(reversed(frontier)))\n",
-    "        node=frontier.pop()    #while there's elements in the stack, pop top item and compare\n",
+    "        node=frontier.pop(0)    #while there's elements in the stack, pop top item and compare\n",
     "        print(\"pop stack:\",frontier)\n",
     "        agent.set_current_state(node.state)\n",
     "        print(\"agent.current_state\",agent.current_state)\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244F70>\n",
+      "Node:  <__main__.Node object at 0x000002068B034F40>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -410,17 +410,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5790>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 1]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA57C0>\n",
+      "Node:  <__main__.Node object at 0x000002068B0AF1F0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -430,17 +420,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 2]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5370>\n",
+      "Node:  <__main__.Node object at 0x000002068B0AF310>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -450,33 +430,23 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5400>\n",
+      "Node:  <__main__.Node object at 0x0000020689C164C0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5E50>\n",
+      "Node:  <__main__.Node object at 0x0000020689C166A0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA59A0>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
       "\n",
       "goal_state [2, 2]\n"
      ]
@@ -505,13 +475,13 @@
     "print(agent1.possible_moves())\n",
     "\"\"\"\n",
     "\n",
-    "path = breadth_first_graph_search(agent1)\n"
+    "path = uniform_cost_search(agent1)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "proba",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "toc": {
    "colors": {
@@ -553,7 +523,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "112ed91ee98a6989d9d7e71eb977853a7d8456dc33f96bdb50f97ad343938d3e"
+    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
    }
   }
  },
