Add breadth functioning

--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,6 @@
     "        children = []\n",
     "\n",
     "        for i in range(len(succ_states)):\n",
-    "            agent.set_current_state(succ_states[i])\n",
     "            children.append(Node(succ_states[i], self, succ_actions[i], succ_costs[i]))\n",
     "        return  children\n",
     "\n",
@@ -237,35 +236,43 @@
     "    Does not get trapped by loops.\n",
     "    If two paths reach a state, only use the first one.\n",
     "    \"\"\"\n",
-    "    frontier = [(Node(agent.initial_state))]  # Stack\n",
+    "    frontier = [(Node(agent.initial_state))]  # Queue\n",
+    "    frontier_co=[frontier[0].state]\n",
     "\n",
     "    explored = []\n",
     "    while frontier:\n",
-    "        print(\"stack:\",frontier)\n",
-    "        print(\"stack reversed\",list(reversed(frontier)))\n",
+    "        # print(\"stack:\",frontier)   # for debugging: returns queue with objects and pointers to obj\n",
+    "        # print(\"stack\",frontier_co)   # for debugging: returns queue with states (coordinates)\n",
+    "        # print(\"stack reversed\",list(reversed(frontier)))\n",
     "        node=frontier.pop(0)    #while there's elements in the stack, pop top item and compare\n",
-    "        print(\"pop stack:\",frontier)\n",
+    "        node_pop=frontier_co.pop(0)\n",
+    "        # print(\"pop stack:\",frontier)   #for debugging: prints queue after popping first element\n",
     "        agent.set_current_state(node.state)\n",
-    "        print(\"agent.current_state\",agent.current_state)\n",
-    "        print(\"node.state\",node.state)\n",
-    "        print(\"node.parent\",node.parent)\n",
-    "        print(\"node.depth\",node.depth)\n",
-    "        print(\"node.action\",node.action)\n",
-    "        print(\"node.path_cost\",node.path_cost)\n",
+    "        # print(\"agent.current_state\",agent.current_state)   #for debugging\n",
+    "        # print(\"node.state\",node.state)\n",
+    "        # print(\"node.parent\",node.parent)\n",
+    "        # print(\"node.depth\",node.depth)\n",
+    "        # print(\"node.action\",node.action)\n",
+    "        # print(\"node.path_cost\",node.path_cost)\n",
     "        if node.state==agent.goal_state:\n",
+    "            # print(\"FOUND IT!!!!!\")\n",
     "            return node\n",
     "        if node not in explored:\n",
-    "            explored.append(node)\n",
-    "        print(\"explored\",explored)\n",
+    "            explored.append(node.state)\n",
+    "        # print(\"explored\",explored)   #for debugging: returns already visited coordinates\n",
     "        succesors=node.successors(agent)\n",
-    "        print(\"succesors\",succesors)\n",
-    "        for item in succesors:\n",
-    "            if item not in explored and item not in frontier:\n",
+    "        # print(\"succesors\",succesors)   #for debugging: list of node obj with possible succesors\n",
+    "        # for i in succesors:\n",
+    "        #     print(f\"succesor:\",i.state)   #for debugging: print coordinates of possible succesors\n",
+    "        for item in succesors:   #check each item if its on queue or explored list\n",
+    "            if item.state not in explored and item.state not in [n.state for n in frontier]: #and item not in frontier:\n",
     "                frontier.append(item)\n",
-    "        print(\"stack\",frontier)\n",
-    "        print(\"\\n\")\n",
-    "        if node.depth>15:\n",
-    "            break\n",
+    "                frontier_co.append(item.state)\n",
+    "        # print(\"stack\",frontier)\n",
+    "        # print(\"stack\",frontier_co)\n",
+    "        # print(\"\\n\")\n",
+    "        # if node.depth>15:\n",
+    "        #     break\n",
     "\n",
     "        \n",
     "        # print(\"succ_states\",succ_states)\n",
@@ -299,7 +306,7 @@
     "        agent.set_current_state(node.state)\n",
     "        for child in node.successors(agent):\n",
     "            if child.state not in explored and child.state not in [n.state for n in frontier]:\n",
-    "                frontier.append(child)\n",
+    "                    frontier.append(child)\n",
     "\n",
     "    return None\n",
     "\n",
@@ -392,63 +399,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "stack: [<__main__.Node object at 0x000002D2E9272590>]\n",
+      "stack [[0, 0]]\n",
+      "pop stack: []\n",
+      "agent.current_state [0, 0]\n",
+      "node.state [0, 0]\n",
+      "node.parent None\n",
+      "node.depth 0\n",
+      "node.action None\n",
+      "node.path_cost 0\n",
+      "explored [[0, 0]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9273400>, <__main__.Node object at 0x000002D2E92719F0>]\n",
+      "succesor: [0, 1]\n",
+      "succesor: [1, 0]\n",
+      "stack [<__main__.Node object at 0x000002D2E9273400>, <__main__.Node object at 0x000002D2E92719F0>]\n",
+      "stack [[0, 1], [1, 0]]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000002068B034F40>\n",
       "\n",
-      "initial_state [0, 0]\n",
+      "stack: [<__main__.Node object at 0x000002D2E9273400>, <__main__.Node object at 0x000002D2E92719F0>]\n",
+      "stack [[0, 1], [1, 0]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E92719F0>]\n",
+      "agent.current_state [0, 1]\n",
+      "node.state [0, 1]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9272590>\n",
+      "node.depth 1\n",
+      "node.action [0, 1]\n",
+      "node.path_cost 1\n",
+      "explored [[0, 0], [0, 1]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9271A50>, <__main__.Node object at 0x000002D2E9273520>]\n",
+      "succesor: [0, 2]\n",
+      "succesor: [0, 0]\n",
+      "succesor: [1, 1]\n",
+      "stack [<__main__.Node object at 0x000002D2E92719F0>, <__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9273520>]\n",
+      "stack [[1, 0], [0, 2], [1, 1]]\n",
       "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [0, 0]\n",
+      "stack: [<__main__.Node object at 0x000002D2E92719F0>, <__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9273520>]\n",
+      "stack [[1, 0], [0, 2], [1, 1]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9273520>]\n",
+      "agent.current_state [1, 0]\n",
+      "node.state [1, 0]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9272590>\n",
+      "node.depth 1\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 5\n",
+      "explored [[0, 0], [0, 1], [1, 0]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9272620>, <__main__.Node object at 0x000002D2E92735B0>, <__main__.Node object at 0x000002D2E9272C80>]\n",
+      "succesor: [1, 1]\n",
+      "succesor: [0, 0]\n",
+      "succesor: [2, 0]\n",
+      "stack [<__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9273520>, <__main__.Node object at 0x000002D2E9272C80>]\n",
+      "stack [[0, 2], [1, 1], [2, 0]]\n",
       "\n",
-      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000002068B0AF1F0>\n",
+      "stack: [<__main__.Node object at 0x000002D2E9271AE0>, <__main__.Node object at 0x000002D2E9273520>, <__main__.Node object at 0x000002D2E9272C80>]\n",
+      "stack [[0, 2], [1, 1], [2, 0]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9273520>, <__main__.Node object at 0x000002D2E9272C80>]\n",
+      "agent.current_state [0, 2]\n",
+      "node.state [0, 2]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9273400>\n",
+      "node.depth 2\n",
+      "node.action [0, 1]\n",
+      "node.path_cost 101\n",
+      "explored [[0, 0], [0, 1], [1, 0], [0, 2]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9271A50>, <__main__.Node object at 0x000002D2E9273430>]\n",
+      "succesor: [0, 1]\n",
+      "succesor: [1, 2]\n",
+      "stack [<__main__.Node object at 0x000002D2E9273520>, <__main__.Node object at 0x000002D2E9272C80>, <__main__.Node object at 0x000002D2E9273430>]\n",
+      "stack [[1, 1], [2, 0], [1, 2]]\n",
       "\n",
-      "initial_state [0, 0]\n",
       "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "stack: [<__main__.Node object at 0x000002D2E9273520>, <__main__.Node object at 0x000002D2E9272C80>, <__main__.Node object at 0x000002D2E9273430>]\n",
+      "stack [[1, 1], [2, 0], [1, 2]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9272C80>, <__main__.Node object at 0x000002D2E9273430>]\n",
+      "agent.current_state [1, 1]\n",
+      "node.state [1, 1]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9273400>\n",
+      "node.depth 2\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 101\n",
+      "explored [[0, 0], [0, 1], [1, 0], [0, 2], [1, 1]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9272620>, <__main__.Node object at 0x000002D2E92735B0>, <__main__.Node object at 0x000002D2E9273010>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "succesor: [1, 2]\n",
+      "succesor: [1, 0]\n",
+      "succesor: [0, 1]\n",
+      "succesor: [2, 1]\n",
+      "stack [<__main__.Node object at 0x000002D2E9272C80>, <__main__.Node object at 0x000002D2E9273430>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "stack [[2, 0], [1, 2], [2, 1]]\n",
       "\n",
-      "current_state:  [1, 0]\n",
       "\n",
-      "goal_state [2, 2]\n",
+      "stack: [<__main__.Node object at 0x000002D2E9272C80>, <__main__.Node object at 0x000002D2E9273430>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "stack [[2, 0], [1, 2], [2, 1]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9273430>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "agent.current_state [2, 0]\n",
+      "node.state [2, 0]\n",
+      "node.parent <__main__.Node object at 0x000002D2E92719F0>\n",
+      "node.depth 2\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 15\n",
+      "explored [[0, 0], [0, 1], [1, 0], [0, 2], [1, 1], [2, 0]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9271A50>, <__main__.Node object at 0x000002D2E92730A0>]\n",
+      "succesor: [2, 1]\n",
+      "succesor: [1, 0]\n",
+      "stack [<__main__.Node object at 0x000002D2E9273430>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "stack [[1, 2], [2, 1]]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000002068B0AF310>\n",
       "\n",
-      "initial_state [0, 0]\n",
+      "stack: [<__main__.Node object at 0x000002D2E9273430>, <__main__.Node object at 0x000002D2E9272F50>]\n",
+      "stack [[1, 2], [2, 1]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9272F50>]\n",
+      "agent.current_state [1, 2]\n",
+      "node.state [1, 2]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9271AE0>\n",
+      "node.depth 3\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 106\n",
+      "explored [[0, 0], [0, 1], [1, 0], [0, 2], [1, 1], [2, 0], [1, 2]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9272620>, <__main__.Node object at 0x000002D2E92735B0>, <__main__.Node object at 0x000002D2E9273010>]\n",
+      "succesor: [1, 1]\n",
+      "succesor: [0, 2]\n",
+      "succesor: [2, 2]\n",
+      "stack [<__main__.Node object at 0x000002D2E9272F50>, <__main__.Node object at 0x000002D2E9273010>]\n",
+      "stack [[2, 1], [2, 2]]\n",
       "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 1]\n",
+      "stack: [<__main__.Node object at 0x000002D2E9272F50>, <__main__.Node object at 0x000002D2E9273010>]\n",
+      "stack [[2, 1], [2, 2]]\n",
+      "pop stack: [<__main__.Node object at 0x000002D2E9273010>]\n",
+      "agent.current_state [2, 1]\n",
+      "node.state [2, 1]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9273520>\n",
+      "node.depth 3\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 102\n",
+      "explored [[0, 0], [0, 1], [1, 0], [0, 2], [1, 1], [2, 0], [1, 2], [2, 1]]\n",
+      "succesors [<__main__.Node object at 0x000002D2E9271A50>, <__main__.Node object at 0x000002D2E9273130>, <__main__.Node object at 0x000002D2E9272C50>]\n",
+      "succesor: [2, 2]\n",
+      "succesor: [2, 0]\n",
+      "succesor: [1, 1]\n",
+      "stack [<__main__.Node object at 0x000002D2E9273010>]\n",
+      "stack [[2, 2]]\n",
       "\n",
-      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x0000020689C164C0>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x0000020689C166A0>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state [2, 2]\n"
+      "stack: [<__main__.Node object at 0x000002D2E9273010>]\n",
+      "stack [[2, 2]]\n",
+      "pop stack: []\n",
+      "agent.current_state [2, 2]\n",
+      "node.state [2, 2]\n",
+      "node.parent <__main__.Node object at 0x000002D2E9273430>\n",
+      "node.depth 4\n",
+      "node.action [1, 0]\n",
+      "node.path_cost 206\n",
+      "FOUND IT!!!!!\n"
      ]
     }
    ],
@@ -475,13 +584,20 @@
     "print(agent1.possible_moves())\n",
     "\"\"\"\n",
     "\n",
-    "path = uniform_cost_search(agent1)\n"
+    "path = breadth_first_graph_search_2(agent1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "proba",
+   "display_name": "venv_algo",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "toc": {
    "colors": {
@@ -523,7 +639,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
+    "hash": "c7257608cb58f0e6924d5b0d1dcd0c2fa2addcf65a5e28a237330e6970e8117e"
    }
   }
  },
