--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -381,16 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cf693a0>"
+       "<__main__.Node at 0x1fa4cf88610>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
     "\n",
     "initial_state = [0, 0]\n",
     "# goal_state = [2,2]\n",
-    "goal_state=[10,11]\n",
+    "goal_state=[0,3]\n",
     "\n",
     "agent1 = Agent(map1, COSTS, initial_state, goal_state)\n",
     "\n",
@@ -425,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 11]"
+       "[0, 3]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -480,53 +480,7 @@
       "[1, 2]\n",
       "[0, 2]\n",
       "[0, 3]\n",
-      "[0, 4]\n",
-      "[1, 4]\n",
-      "[2, 4]\n",
-      "[3, 4]\n",
-      "[4, 4]\n",
-      "[5, 4]\n",
-      "[6, 4]\n",
-      "[7, 4]\n",
-      "[8, 4]\n",
-      "[9, 4]\n",
-      "[10, 4]\n",
-      "[11, 4]\n",
-      "[12, 4]\n",
-      "[12, 5]\n",
-      "[12, 6]\n",
-      "[11, 6]\n",
-      "[10, 6]\n",
-      "[9, 6]\n",
-      "[8, 6]\n",
-      "[7, 6]\n",
-      "[6, 6]\n",
-      "[5, 6]\n",
-      "[4, 6]\n",
-      "[3, 6]\n",
-      "[2, 6]\n",
-      "[1, 6]\n",
-      "[0, 6]\n",
-      "[0, 7]\n",
-      "[0, 8]\n",
-      "[1, 8]\n",
-      "[2, 8]\n",
-      "[3, 8]\n",
-      "[4, 8]\n",
-      "[5, 8]\n",
-      "[6, 8]\n",
-      "[7, 8]\n",
-      "[8, 8]\n",
-      "[9, 8]\n",
-      "[10, 8]\n",
-      "[11, 8]\n",
-      "[12, 8]\n",
-      "[12, 9]\n",
-      "[12, 10]\n",
-      "[11, 10]\n",
-      "[10, 10]\n",
-      "[10, 11]\n",
-      "74\n"
+      "28\n"
      ]
     }
    ],
@@ -541,26 +495,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏬' '🚸' '⏩' '⏩' '⏬' '🛣' '⏩' '⏩' '⏬' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
-      "['⏬' '🌲' '⏫' '🛣' '⏬' '🌲' '⏫' '🛣' '⏬' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🛣' '⏬' '🌲' '⏫' '🛣' '⏬' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
-      "['⏬' '🛑' '⏫' '🚸' '⏬' '🌲' '⏫' '🛣' '⏬' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
-      "['⏬' '🚘' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
-      "['⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🚔' '⏬' '🛣' '⏫' '🚧' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
-      "['⏬' '🛣' '⏫' '🚔' '⏬' '🛣' '⏫' '🏢' '⏬' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
-      "['⏬' '🛑' '⏫' '🛣' '⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
-      "['⏬' '🛣' '⏫' '🌲' '⏬' '🚦' '⏫' '🛣' '⏬' '🛣' '⏩' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
-      "['⏬' '🚸' '⏫' '🌲' '⏬' '🛣' '⏫' '🛣' '⏬' '🚔' '⏫' '🛣' '🚦' '🚘' '🛣' '🛣']\n",
-      "['⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🚘' '🛣' '🛣' '🛣' '🛣']\n"
+      "['⏬' '🚸' '⏩' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
+      "['⏬' '🌲' '⏫' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
+      "['⏬' '🛑' '⏫' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
+      "['⏬' '🚘' '⏫' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
+      "['⏬' '🛣' '⏫' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
+      "['⏬' '🛣' '⏫' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
+      "['⏬' '🛑' '⏫' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
+      "['⏬' '🛣' '⏫' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
+      "['⏬' '🚸' '⏫' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🚦' '🚘' '🛣' '🛣']\n",
+      "['⏩' '⏩' '⏫' '🛣' '🛣' '🛣' '🛑' '🛣' '🚘' '🚘' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣']\n"
      ]
     }
    ],
@@ -585,16 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cf2f4f0>"
+       "<__main__.Node at 0x1fa4cf8c8e0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,23 +574,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏬' '🛣' '🛣' '🚔' '🛣']\n",
-      "['🛣' '🌲' '🌲' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '⏬' '🛣' '🛣' '🛣' '🛣']\n",
-      "['🛣' '🛣' '🛣' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '⏬' '🌲' '🛣' '🚘' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '⏬' '🌲' '🛣' '🛣' '🚦']\n",
-      "['🌲' '🚘' '🚘' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '⏬' '🛣' '🛑' '🛣' '🛣']\n",
-      "['🛣' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '⏬' '🛣' '🛣' '🛣' '🚸']\n",
-      "['🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '⏬' '🛣' '🚸' '🛣' '🛣']\n",
-      "['🚦' '🛣' '🏢' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '⏬' '🛣' '🛣' '🛣' '🚔']\n",
-      "['🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '⏬' '🚘' '🚔' '🛣' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '⏬' '🛣' '🛣' '🛣' '🚘']\n",
+      "['⏩' '⏩' '⏩' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
+      "['🛣' '🌲' '🌲' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
+      "['🛣' '🛣' '🛣' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
+      "['🛣' '🛑' '🛣' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
+      "['🌲' '🚘' '🚘' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
+      "['🛣' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
+      "['🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
+      "['🚦' '🛣' '🏢' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
+      "['🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
+      "['🛣' '🛑' '🛣' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
       "['🛣' '🛣' '🛣' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
       "['🚘' '🚸' '🛣' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🚦' '🚘' '🛣' '🛣']\n",
       "['🚘' '🛣' '🚧' '🛣' '🛣' '🛣' '🛑' '🛣' '🚘' '🚘' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣']\n"
@@ -662,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -673,25 +627,7 @@
       "[0, 1]\n",
       "[0, 2]\n",
       "[0, 3]\n",
-      "[0, 4]\n",
-      "[0, 5]\n",
-      "[0, 6]\n",
-      "[0, 7]\n",
-      "[0, 8]\n",
-      "[0, 9]\n",
-      "[0, 10]\n",
-      "[0, 11]\n",
-      "[1, 11]\n",
-      "[2, 11]\n",
-      "[3, 11]\n",
-      "[4, 11]\n",
-      "[5, 11]\n",
-      "[6, 11]\n",
-      "[7, 11]\n",
-      "[8, 11]\n",
-      "[9, 11]\n",
-      "[10, 11]\n",
-      "22\n"
+      "4\n"
      ]
     }
    ],
@@ -706,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -714,16 +650,16 @@
      "output_type": "stream",
      "text": [
       "FOUND IT!!!!!\n",
-      "[10, 11]\n"
+      "[0, 3]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cf898b0>"
+       "<__main__.Node at 0x1fa4cfe4550>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,24 +672,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
-      "['🛣' '⏩' '⏬' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
-      "['🛣' '🛣' '⏬' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '⏬' '⏪']\n",
-      "['🛣' '🛑' '⏬' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '⏬' '⏫']\n",
-      "['⏬' '⏪' '⏪' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '⏬' '⏪' '⏫']\n",
-      "['⏬' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🏢' '🚔' '🛣' '🛣' '⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🛣' '🚔' '🛣' '🛣' '⏫' '⏬' '⏩' '⏬' '🛣' '⏬' '⏪' '⏪' '🛣' '⏫']\n",
-      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '⏫' '⏩' '⏫' '⏬' '🛣' '⏬' '🛣' '🛣' '🛣' '⏫']\n",
-      "['🛣' '⏬' '🛣' '⏩' '⏬' '🚦' '⏫' '🛣' '🛣' '⏬' '🛣' '🛣' '🛣' '🛣' '⏩' '⏫']\n",
+      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '⏬' '⏪' '⏬' '⏪' '🚔' '🛣']\n",
+      "['🛣' '⏩' '⏬' '⏫' '🛣' '⏬' '⏪' '🛣' '🛣' '⏬' '⏪' '⏫' '⏪' '⏫' '🛣' '🛣']\n",
+      "['🛣' '🛣' '⏬' '⏫' '🛣' '⏬' '⏫' '🛣' '🛣' '⏬' '🛣' '⏩' '⏬' '⏫' '⏬' '⏪']\n",
+      "['🛣' '🛑' '⏬' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '⏪' '🛣' '⏫' '⏩' '⏫' '⏬' '⏫']\n",
+      "['⏬' '⏪' '⏪' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '🛣' '⏩' '⏫' '🛣' '⏬' '⏪' '⏫']\n",
+      "['⏬' '🛣' '🛣' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
+      "['⏬' '🛣' '🏢' '⏫' '⏪' '⏪' '⏫' '⏪' '⏪' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
+      "['⏬' '🛣' '🏢' '🚔' '🛣' '🛣' '⏩' '⏬' '🛣' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
+      "['⏬' '🛣' '🛣' '🚔' '🛣' '🛣' '⏫' '⏬' '⏩' '⏬' '⏫' '⏬' '⏪' '⏪' '🛣' '⏫']\n",
+      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '⏫' '⏩' '⏫' '⏬' '⏫' '⏬' '🛣' '🛣' '🛣' '⏫']\n",
+      "['🛣' '⏬' '🛣' '⏩' '⏬' '🚦' '⏫' '🛣' '🛣' '⏬' '⏫' '⏪' '🛣' '🛣' '⏩' '⏫']\n",
       "['⏬' '⏪' '⏩' '⏫' '⏬' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏩' '⏩' '⏬' '⏫' '🛣']\n",
       "['⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🛣' '🚘' '⏩' '⏩' '⏫' '🛣' '⏩' '⏫' '🛣']\n"
      ]
@@ -778,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +795,57 @@
       "[8, 11]\n",
       "[9, 11]\n",
       "[10, 11]\n",
-      "74\n"
+      "[10, 10]\n",
+      "[9, 10]\n",
+      "[8, 10]\n",
+      "[7, 10]\n",
+      "[6, 10]\n",
+      "[5, 10]\n",
+      "[4, 10]\n",
+      "[4, 11]\n",
+      "[3, 11]\n",
+      "[2, 11]\n",
+      "[2, 12]\n",
+      "[3, 12]\n",
+      "[3, 13]\n",
+      "[2, 13]\n",
+      "[1, 13]\n",
+      "[0, 13]\n",
+      "[0, 12]\n",
+      "[1, 12]\n",
+      "[1, 11]\n",
+      "[0, 11]\n",
+      "[0, 10]\n",
+      "[1, 10]\n",
+      "[1, 9]\n",
+      "[2, 9]\n",
+      "[3, 9]\n",
+      "[3, 8]\n",
+      "[4, 8]\n",
+      "[5, 8]\n",
+      "[6, 8]\n",
+      "[6, 7]\n",
+      "[6, 6]\n",
+      "[5, 6]\n",
+      "[4, 6]\n",
+      "[3, 6]\n",
+      "[2, 6]\n",
+      "[1, 6]\n",
+      "[1, 5]\n",
+      "[2, 5]\n",
+      "[3, 5]\n",
+      "[4, 5]\n",
+      "[5, 5]\n",
+      "[6, 5]\n",
+      "[6, 4]\n",
+      "[6, 3]\n",
+      "[5, 3]\n",
+      "[4, 3]\n",
+      "[3, 3]\n",
+      "[2, 3]\n",
+      "[1, 3]\n",
+      "[0, 3]\n",
+      "124\n"
      ]
     }
    ],
