--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -1015,7 +1015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "proba",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1029,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "toc": {
    "colors": {
@@ -1057,7 +1057,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
+    "hash": "5ddffc6228e7fe7cba668577e622f89d9d26445fd2ef8028a1d4f8d9a92670f1"
    }
   }
  },
