--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -8,6 +8,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center><span style=\"color:teal\">Search algorithms\n",
+    "</span></center></h1>\n",
+    "\n",
+    "<h4><center>William David Moreno Rendon \n",
+    "<br>\n",
+    "Juan Camilo Sarmiento Peñuela \n",
+    "<br>\n",
+    "Andres Felipe Rincon Prieto\n",
+    "<br>\n",
+    "Manuel Felipe Arias Pineda\n",
+    "<br>\n",
+    "Yulisa Niño Meza\n",
+    "\n",
+    "</center></h4>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -96,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -381,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cf88610>"
+       "<__main__.Node at 0x2607fe44fd0>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +427,7 @@
     "\n",
     "initial_state = [0, 0]\n",
     "# goal_state = [2,2]\n",
-    "goal_state=[0,3]\n",
+    "goal_state=[12,15]\n",
     "\n",
     "agent1 = Agent(map1, COSTS, initial_state, goal_state)\n",
     "\n",
@@ -425,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 3]"
+       "[12, 15]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +501,79 @@
       "[1, 2]\n",
       "[0, 2]\n",
       "[0, 3]\n",
-      "28\n"
+      "[0, 4]\n",
+      "[1, 4]\n",
+      "[2, 4]\n",
+      "[3, 4]\n",
+      "[4, 4]\n",
+      "[5, 4]\n",
+      "[6, 4]\n",
+      "[7, 4]\n",
+      "[8, 4]\n",
+      "[9, 4]\n",
+      "[10, 4]\n",
+      "[11, 4]\n",
+      "[12, 4]\n",
+      "[12, 5]\n",
+      "[12, 6]\n",
+      "[11, 6]\n",
+      "[10, 6]\n",
+      "[9, 6]\n",
+      "[8, 6]\n",
+      "[7, 6]\n",
+      "[6, 6]\n",
+      "[5, 6]\n",
+      "[4, 6]\n",
+      "[3, 6]\n",
+      "[2, 6]\n",
+      "[1, 6]\n",
+      "[0, 6]\n",
+      "[0, 7]\n",
+      "[0, 8]\n",
+      "[1, 8]\n",
+      "[2, 8]\n",
+      "[3, 8]\n",
+      "[4, 8]\n",
+      "[5, 8]\n",
+      "[6, 8]\n",
+      "[7, 8]\n",
+      "[8, 8]\n",
+      "[9, 8]\n",
+      "[10, 8]\n",
+      "[11, 8]\n",
+      "[12, 8]\n",
+      "[12, 9]\n",
+      "[12, 10]\n",
+      "[11, 10]\n",
+      "[10, 10]\n",
+      "[9, 10]\n",
+      "[8, 10]\n",
+      "[7, 10]\n",
+      "[6, 10]\n",
+      "[5, 10]\n",
+      "[4, 10]\n",
+      "[3, 10]\n",
+      "[2, 10]\n",
+      "[1, 10]\n",
+      "[0, 10]\n",
+      "[0, 11]\n",
+      "[0, 12]\n",
+      "[1, 12]\n",
+      "[2, 12]\n",
+      "[3, 12]\n",
+      "[4, 12]\n",
+      "[5, 12]\n",
+      "[6, 12]\n",
+      "[7, 12]\n",
+      "[8, 12]\n",
+      "[9, 12]\n",
+      "[10, 12]\n",
+      "[11, 12]\n",
+      "[12, 12]\n",
+      "[12, 13]\n",
+      "[12, 14]\n",
+      "[12, 15]\n",
+      "100\n"
      ]
     }
    ],
@@ -495,26 +588,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏬' '🚸' '⏩' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
-      "['⏬' '🌲' '⏫' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
-      "['⏬' '🛑' '⏫' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
-      "['⏬' '🚘' '⏫' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
-      "['⏬' '🛣' '⏫' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
-      "['⏬' '🛣' '⏫' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
-      "['⏬' '🛣' '⏫' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
-      "['⏬' '🛑' '⏫' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
-      "['⏬' '🛣' '⏫' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
-      "['⏬' '🚸' '⏫' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🚦' '🚘' '🛣' '🛣']\n",
-      "['⏩' '⏩' '⏫' '🛣' '🛣' '🛣' '🛑' '🛣' '🚘' '🚘' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣']\n"
+      "['⏬' '🚸' '⏩' '⏩' '⏬' '🛣' '⏩' '⏩' '⏬' '🛣' '⏩' '⏩' '⏬' '🛣' '🚔' '🛣']\n",
+      "['⏬' '🌲' '⏫' '🛣' '⏬' '🌲' '⏫' '🛣' '⏬' '🚘' '⏫' '🛣' '⏬' '🛣' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🛣' '⏬' '🌲' '⏫' '🛣' '⏬' '🚘' '⏫' '🌲' '⏬' '🛣' '🚘' '🛣']\n",
+      "['⏬' '🛑' '⏫' '🚸' '⏬' '🌲' '⏫' '🛣' '⏬' '🛣' '⏫' '🌲' '⏬' '🛣' '🛣' '🚦']\n",
+      "['⏬' '🚘' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '⏫' '🌲' '⏬' '🛑' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🛣' '🚸']\n",
+      "['⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '⏬' '🚸' '🛣' '🛣']\n",
+      "['⏬' '🛣' '⏫' '🚔' '⏬' '🛣' '⏫' '🚧' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🛣' '🚔']\n",
+      "['⏬' '🛣' '⏫' '🚔' '⏬' '🛣' '⏫' '🏢' '⏬' '🚸' '⏫' '🛑' '⏬' '🚔' '🛣' '🛣']\n",
+      "['⏬' '🛑' '⏫' '🛣' '⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '⏫' '🏢' '⏬' '🛣' '🛣' '🚘']\n",
+      "['⏬' '🛣' '⏫' '🌲' '⏬' '🚦' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '⏬' '🛣' '🚧' '🚘']\n",
+      "['⏬' '🚸' '⏫' '🌲' '⏬' '🛣' '⏫' '🛣' '⏬' '🚔' '⏫' '🛣' '⏬' '🚘' '🛣' '🛣']\n",
+      "['⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🚘' '⏩' '⏩' '⏩' '🛣']\n"
      ]
     }
    ],
@@ -539,16 +632,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cf8c8e0>"
+       "<__main__.Node at 0x2607fe19c70>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,25 +667,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏩' '⏩' '⏩' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
-      "['🛣' '🌲' '🌲' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
-      "['🛣' '🛣' '🛣' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
-      "['🌲' '🚘' '🚘' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
-      "['🛣' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
-      "['🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
-      "['🚦' '🛣' '🏢' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
-      "['🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
-      "['🛣' '🛑' '🛣' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
-      "['🛣' '🛣' '🛣' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚧' '🚘']\n",
-      "['🚘' '🚸' '🛣' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🚦' '🚘' '🛣' '🛣']\n",
+      "['⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏩' '⏬']\n",
+      "['🛣' '🌲' '🌲' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '⏬']\n",
+      "['🛣' '🛣' '🛣' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '⏬']\n",
+      "['🛣' '🛑' '🛣' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '⏬']\n",
+      "['🌲' '🚘' '🚘' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '⏬']\n",
+      "['🛣' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '⏬']\n",
+      "['🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '⏬']\n",
+      "['🚦' '🛣' '🏢' '🚔' '🛣' '🛣' '🏢' '🚧' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '⏬']\n",
+      "['🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🏢' '🏢' '🏢' '🚸' '🛣' '🛑' '🚘' '🚔' '🛣' '⏬']\n",
+      "['🛣' '🛑' '🛣' '🛣' '🛣' '🛣' '🏢' '🏢' '🏢' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '⏬']\n",
+      "['🛣' '🛣' '🛣' '🌲' '🌲' '🚦' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚧' '⏬']\n",
+      "['🚘' '🚸' '🛣' '🌲' '🌲' '🛣' '🛣' '🛣' '🛣' '🚔' '🛣' '🛣' '🚦' '🚘' '🛣' '⏬']\n",
       "['🚘' '🛣' '🚧' '🛣' '🛣' '🛣' '🛑' '🛣' '🚘' '🚘' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣']\n"
      ]
     }
@@ -616,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +720,31 @@
       "[0, 1]\n",
       "[0, 2]\n",
       "[0, 3]\n",
-      "4\n"
+      "[0, 4]\n",
+      "[0, 5]\n",
+      "[0, 6]\n",
+      "[0, 7]\n",
+      "[0, 8]\n",
+      "[0, 9]\n",
+      "[0, 10]\n",
+      "[0, 11]\n",
+      "[0, 12]\n",
+      "[0, 13]\n",
+      "[0, 14]\n",
+      "[0, 15]\n",
+      "[1, 15]\n",
+      "[2, 15]\n",
+      "[3, 15]\n",
+      "[4, 15]\n",
+      "[5, 15]\n",
+      "[6, 15]\n",
+      "[7, 15]\n",
+      "[8, 15]\n",
+      "[9, 15]\n",
+      "[10, 15]\n",
+      "[11, 15]\n",
+      "[12, 15]\n",
+      "28\n"
      ]
     }
    ],
@@ -642,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -650,16 +767,16 @@
      "output_type": "stream",
      "text": [
       "FOUND IT!!!!!\n",
-      "[0, 3]\n"
+      "[12, 15]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x1fa4cfe4550>"
+       "<__main__.Node at 0x2607fe5e730>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,25 +789,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '⏬' '⏪' '⏬' '⏪' '🚔' '🛣']\n",
-      "['🛣' '⏩' '⏬' '⏫' '🛣' '⏬' '⏪' '🛣' '🛣' '⏬' '⏪' '⏫' '⏪' '⏫' '🛣' '🛣']\n",
-      "['🛣' '🛣' '⏬' '⏫' '🛣' '⏬' '⏫' '🛣' '🛣' '⏬' '🛣' '⏩' '⏬' '⏫' '⏬' '⏪']\n",
-      "['🛣' '🛑' '⏬' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '⏪' '🛣' '⏫' '⏩' '⏫' '⏬' '⏫']\n",
-      "['⏬' '⏪' '⏪' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '🛣' '⏩' '⏫' '🛣' '⏬' '⏪' '⏫']\n",
-      "['⏬' '🛣' '🛣' '⏫' '🛣' '⏬' '⏫' '🛣' '⏬' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🏢' '⏫' '⏪' '⏪' '⏫' '⏪' '⏪' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🏢' '🚔' '🛣' '🛣' '⏩' '⏬' '🛣' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏫']\n",
-      "['⏬' '🛣' '🛣' '🚔' '🛣' '🛣' '⏫' '⏬' '⏩' '⏬' '⏫' '⏬' '⏪' '⏪' '🛣' '⏫']\n",
-      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '⏫' '⏩' '⏫' '⏬' '⏫' '⏬' '🛣' '🛣' '🛣' '⏫']\n",
-      "['🛣' '⏬' '🛣' '⏩' '⏬' '🚦' '⏫' '🛣' '🛣' '⏬' '⏫' '⏪' '🛣' '🛣' '⏩' '⏫']\n",
-      "['⏬' '⏪' '⏩' '⏫' '⏬' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏩' '⏩' '⏬' '⏫' '🛣']\n",
+      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛑' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🚔' '🛣']\n",
+      "['🛣' '⏩' '⏬' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣']\n",
+      "['🛣' '🛣' '⏬' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚘' '🛣' '🌲' '🌲' '🛣' '🚘' '🛣']\n",
+      "['🛣' '🛑' '⏬' '🚸' '🛣' '🌲' '🛣' '🛣' '🏢' '🛣' '🛣' '🌲' '🌲' '🛣' '🛣' '🚦']\n",
+      "['⏬' '⏪' '⏪' '🛣' '🛣' '🛣' '🚘' '🛣' '🏢' '🛣' '🛣' '🌲' '🛣' '🛑' '🛣' '🛣']\n",
+      "['⏬' '🛣' '🛣' '🏢' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚦' '🛣' '🛣' '🛣' '🛣' '🚸']\n",
+      "['⏬' '🛣' '🏢' '🏢' '🏢' '🛣' '🛑' '🛣' '🛣' '🛣' '🚘' '🛣' '🛣' '🚸' '🛣' '🛣']\n",
+      "['⏬' '🛣' '🏢' '🚔' '🛣' '🛣' '⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🛣' '🚔']\n",
+      "['⏬' '🛣' '🛣' '🚔' '🛣' '🛣' '⏫' '⏬' '⏩' '⏬' '🛣' '🛑' '🚘' '🚔' '🛣' '🛣']\n",
+      "['⏩' '⏬' '🛣' '🛣' '🛣' '🛣' '⏫' '⏩' '⏫' '⏬' '🛣' '🏢' '🛣' '🛣' '🛣' '🚘']\n",
+      "['🛣' '⏬' '🛣' '⏩' '⏬' '🚦' '⏫' '🛣' '🛣' '⏬' '🛣' '🛣' '🛣' '🛣' '⏩' '⏬']\n",
+      "['⏬' '⏪' '⏩' '⏫' '⏬' '🛣' '⏫' '🛣' '🛣' '⏬' '🛣' '⏩' '⏩' '⏬' '⏫' '⏬']\n",
       "['⏩' '⏩' '⏫' '🛣' '⏩' '⏩' '⏫' '🛣' '🚘' '⏩' '⏩' '⏫' '🛣' '⏩' '⏫' '🛣']\n"
      ]
     }
@@ -714,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -775,77 +892,9 @@
       "[11, 14]\n",
       "[10, 14]\n",
       "[10, 15]\n",
-      "[9, 15]\n",
-      "[8, 15]\n",
-      "[7, 15]\n",
-      "[6, 15]\n",
-      "[5, 15]\n",
-      "[4, 15]\n",
-      "[3, 15]\n",
-      "[2, 15]\n",
-      "[2, 14]\n",
-      "[3, 14]\n",
-      "[4, 14]\n",
-      "[4, 13]\n",
-      "[5, 13]\n",
-      "[6, 13]\n",
-      "[7, 13]\n",
-      "[8, 13]\n",
-      "[8, 12]\n",
-      "[8, 11]\n",
-      "[9, 11]\n",
-      "[10, 11]\n",
-      "[10, 10]\n",
-      "[9, 10]\n",
-      "[8, 10]\n",
-      "[7, 10]\n",
-      "[6, 10]\n",
-      "[5, 10]\n",
-      "[4, 10]\n",
-      "[4, 11]\n",
-      "[3, 11]\n",
-      "[2, 11]\n",
-      "[2, 12]\n",
-      "[3, 12]\n",
-      "[3, 13]\n",
-      "[2, 13]\n",
-      "[1, 13]\n",
-      "[0, 13]\n",
-      "[0, 12]\n",
-      "[1, 12]\n",
-      "[1, 11]\n",
-      "[0, 11]\n",
-      "[0, 10]\n",
-      "[1, 10]\n",
-      "[1, 9]\n",
-      "[2, 9]\n",
-      "[3, 9]\n",
-      "[3, 8]\n",
-      "[4, 8]\n",
-      "[5, 8]\n",
-      "[6, 8]\n",
-      "[6, 7]\n",
-      "[6, 6]\n",
-      "[5, 6]\n",
-      "[4, 6]\n",
-      "[3, 6]\n",
-      "[2, 6]\n",
-      "[1, 6]\n",
-      "[1, 5]\n",
-      "[2, 5]\n",
-      "[3, 5]\n",
-      "[4, 5]\n",
-      "[5, 5]\n",
-      "[6, 5]\n",
-      "[6, 4]\n",
-      "[6, 3]\n",
-      "[5, 3]\n",
-      "[4, 3]\n",
-      "[3, 3]\n",
-      "[2, 3]\n",
-      "[1, 3]\n",
-      "[0, 3]\n",
-      "124\n"
+      "[11, 15]\n",
+      "[12, 15]\n",
+      "56\n"
      ]
     }
    ],
@@ -861,7 +910,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "proba",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -875,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "toc": {
    "colors": {
@@ -903,7 +952,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
+    "hash": "eabfd7d19aaf8c028d2e706059a933caf1b2347856756c8557b9aeb79deceee2"
    }
   }
  },
